*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@167 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,13 @@
+Changes for v0.46
+
+- Limit protocol choices on setup panel to protocols supported by remote.
+- Request  730285: Only show protocol upgrade code when actually required
+- Show warning when protocol and remote aren't compatible
+- Change version to v0.46
+
 Changes for v0.45
 
 - Bugs in protocol variant support
-
 
 Changes for v0.44
 
