--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@ Changes for v0.46
 - Limit protocol choices on setup panel to protocols supported by remote.
 - Request  730285: Only show protocol upgrade code when actually required
 - Show warning when protocol and remote aren't compatible
+- Bug 750408:Look and feel processing
 - Change version to v0.46
 
 Changes for v0.45
