--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,20 @@
+Changes for v0.50
+
+- Added Layout Panel, which shows which buttons are included in the key map
+  for the selected device type.  This panel is driven by information in the
+  RDF file.  The first is the Image= entry in the [General] section, which
+  specifies the name of the file containing a picture of the remote.  It can be
+  a GIF or JPG file.  Next is the [ButtonShapes] section, which contains a space
+  separated list of button shape descriptors as follows:
+  <button name>=<shape description> where
+    <button name> is the name of a button defined in the [Buttons] section
+    <shape desctiption> is one of:
+      ellipse:<x>,<w>,<width>,<height>
+      rect:<x>,<y>,<width>,<height>
+      poly:<x>,<y>[,<x>,<y>]*
+  Currently only the RDFs for the 15-1994, URC-6131, and URC-7800 have these
+  these entries.
+
 Changes for v0.49
 
 - Device parms lost when changing remotes requires a different, but compatible
