--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,7 +9,7 @@ Changes for v0.50
   <button name>=<shape description> where
     <button name> is the name of a button defined in the [Buttons] section
     <shape desctiption> is one of:
-      ellipse:<x>,<w>,<width>,<height>
+      ellipse:<x>,<y>,<width>,<height>
       rect:<x>,<y>,<width>,<height>
       poly:<x>,<y>[,<x>,<y>]*
   Currently only the RDFs for the 15-1994, URC-6131, and URC-7800 have these
