Win98, Layout Panel doesn't update when the device type changes.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@195 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes for v0.51
+
+- Win98 doesn't repaint Layout Panel when device type changed
+- Highlight a button on the Layout Panel by clicking on it.
+
 Changes for v0.50
 
 - Added Layout Panel, which shows which buttons are included in the key map
