Can't open .km files using File:Open
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@196 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Changes for v0.51
 
 - Win98 doesn't repaint Layout Panel when device type changed
 - Highlight a button on the Layout Panel by clicking on it.
+- Can't open .km files using File:Open
 
 Changes for v0.50
 
