*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@236 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Changed for v0.61
+
+- Add/update remote images, maps and rdfs
+- Add Thomson protocol
+- Migrated command parameters when protocol changes are a result of changing remote.
+
 Changes for v0.60
 
 - Add support for named shifted buttons
