Updated images. maps, and rdfs
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@247 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Changed for v0.63
+Changes for v0.63
 
 - Add/update remote images, maps and rdfs
 - Allow RDFs without [ButtonMaps] or [Protocols] sections
