*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@254 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,7 @@
 Changes for v0.65
 
 - Add/update remote images, maps, and rdfs
-- Feature Request 730478: Move External Functions tab
+- Feature Request 805107: Move Layout panel
 - Allow multiple shapes in the map file for the same RDF button
 - Allow an optional display name for a shape in the map file
 
