*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@264 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+Changes for v0.66
+
+- Add/update remote images, maps, and rdfs
+- Request 805120: Add Auto Assign button and feature to Layout panel
+- Add Exit to File menu
+- Improve error reporting when importing KM device upgrade
+- Add support for restrictions and xShift
+
 Changes for v0.65
 
 - Add/update remote images, maps, and rdfs
