*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@314 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,7 @@
 Changes for v0.74
 
 - Remove RDFs from the distribution
+- Updated10-14-03Maps-Images-etc.zip from Nils
 - Add support for multiple image maps in a single RDF.
 
 Changes for v0.73
