--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Changes for v0.75
+
+- Updated 10-17-03 Maps and Images from Nils
+- Updated 10-23-03 Maps and Images from Nils
+- Updated 10-28-03 Maps and Images from Nils
+
 Changes for v0.74
 
 - Remove RDFs from the distribution
