--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Changes for v0.78
+
+- RM Maps-and-Images 1.10.zip
+- Fix support for Hex device parameters
+- Bug 849762: Key code and alternate name function not working together
+
 Changes for v0.77
 
 - Change default value for AdvCodeUpgrade to HEX
