--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Changes for v0.80
+
+- Change handling of DeviceTypeAliases.  No longer required in RDF, but needed for ease of importing KM upgrades and for
+  switching between remotes.  DeviceTypeAlias names are no longer fixed, but consistent values should be used.
+- Corrected bug in importing KM saved files that use 2-byte commands.
+
 Changes for v0.79
 
 - Manual Settings, stage 1: import, save, load.  Can't define or change
