*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@361 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,12 @@
+Changes for v0.84
+
+- Added support for Pioneer MIX protocol
+- Added support for ReplayTV (Simple) protocol
+- Added support for ReplayTV (Advanced) protocol
+- Added support for Zenith protocol
+- Added error message when KM file is imported that uses an 
+  unsupported protocol.
+
 Changes for v0.83
 
 - Add missing FixedData=00 to JVC protocol
