*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@362 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Changes for v0.84
 - Added support for Zenith protocol
 - Added error message when KM file is imported that uses an 
   unsupported protocol.
+- RM Maps-and-Images 1.13.zip
 
 Changes for v0.83
 
