--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,12 @@
-Changed for v0.85
+Changes for v0.86
+
+- Enable importing KM upgrades from the clipboard,
+  similar to KM's Import feature.
+- Enable importing RM upgrades from the clipboard
+- Added Readme.html the guide to "Using Remote Master", 
+  with associated style sheets.  Still needs a lot of work.
+
+Changes for v0.85
 
 - Fix for importing old KM device upgrades
 
