--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+Changes for v0.87
+
+- Enable importing external functions from existing RM and KM upgrade files.
+- Use a single interface for loading RM or KM upgrade files.  Both are now
+  access from File->Open.  To Open a KM file, change the "Files of type:" 
+  field.
+
 Changes for v0.86
 
 - Enable importing KM upgrades from the clipboard,
