--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes for v0.94
+- Allow importing of KM upgrade files that use Device Combiner
+- Improvements to importing of KM upgrade files that use Manual Settings
+
 Changes for v0.93
 - Fix EFC entry on External Function panel
 - Allow $ when entering hex strings
