--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,110 @@
+Changes for v0.97
+- Add SharpDVDTranslator to correctly calculate command byte 2
+- Changed Dishplayer(old) to Dishplayer Network and reversed
+  the dev bits (as Rob requested), thanks John S Fine
+- Add support for protocol translations for non-S3C80 processors
+- Update protocol definitions and lists of supported protocols
+
+Here is a list of the protocols that SHOULD work.  If you find a
+problem with one of these, please open a Bug in SourceForge against
+the controlremote project.
+
+Aiwa
+Aiwa2
+Aiwa Combo
+Akai
+Anthem
+Apex 1100W
+Audiovox
+B&K
+Blaupunkt
+Boston Accoustics
+Boston Official
+Denon
+Denon Combo (Official)
+Denon Combo
+Device Combiner
+Dishplayer
+Dishplayer Network
+Echostar 2200
+Emerson
+F12
+GI 4DTV Hacked
+GI 4DTV Official
+GI Cable
+HK Combo
+Jerrold
+JVC
+JVC-48
+Kaseikyo
+Mitsubishi
+NEC1
+NEC2
+NEC Combo
+NEC1 Combo
+NEC1 2DEV Combo
+NECx1
+NECx2
+Nokia Quad
+Pace
+Panasonic (old)
+Panasonic
+Panasonic VCR Combo
+Panasonic Mixed Combo
+Panasonic Combo2
+Panasonic Multi-Device (Hacked)
+Panasonic Combo (flawed)
+Panasonic2 (LCD)
+Pause Protocol
+Pioneer
+Pioneer DVD
+Pioneer DVD2
+Pioneer MIX
+Pioneer 2CMD
+Pioneer 3DEV
+Proton
+RC-5
+RC-5x
+RC-6
+RC6-M-20n
+RC6-M-24n
+RCA
+RCA (Old)
+RCA Combo (Official)
+RECS80 (45)
+RECS80 (68)
+ReplayTV (Simple)
+ReplayTV (Advanced)
+ReplayTV (Official)
+Scientific Atlanta
+Sharp
+Sharp DVD
+Sony 12/15
+Sony20
+Sony Combo (old)
+Sony Combo (new)
+Sony DSP
+Thomson
+TiVo (Advanced)
+TiVo (Official)
+TiVo (Official 2-byte)
+X10
+Zenith
+
+This is the list of protocols that are present in RM, but are NOT supported:
+
+NEC 2DEV Combo (*)
+Panasonic MIX Combo (*)
+Sony Egg (*)
+Teac-K (*)
+
+
+Here is a list of the protocols that are not yet supported:
+
+RC-5/5x Combo
+RCA Combo (w/Duration)
+
+
 Changes for v0.96a 
 - Fix RDF parsing error 
 - RM Images and Maps v1.16
