--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v1.13
+- Fix problems importing, loading, and saving upgrades that use Manual Settings.
+
 Changes for v1.12
 - Correct support for the Pioneer 3DEV protocol
 - Fix bug switching to Output panel when no values have been assigned to the
