--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,13 @@
+Changes for v1.15
+- Corrected Akai entry in protocols.ini (thanks johnsfine!)
+- Enabled pid-0083 for TV-0159 (thanks johnsfine!)
+- More fixes for importing KM device ugprades that use Manual Settings
+
 Changes for v1.14
 - Improve prompt for unkown remote when loading/importing an ugrade
 - More fixes for importing KM device upgrades that use Manual Settings
 - Handle 999 entries in DigitMaps graciously.
+- Images and Maps w 1.18a from Nils
 
 Changes for v1.13
 - Fix problems importing, loading, and saving upgrades that use Manual Settings.
